--- a/src/main/resources/templates/fragments/inputs/date.html
+++ b/src/main/resources/templates/fragments/inputs/date.html
@@ -5,7 +5,8 @@
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       isRequiredInput=${requiredInputs.getOrDefault(inputName + 'Month', false) || 
         requiredInputs.getOrDefault(inputName + 'Day', false) || 
-        requiredInputs.getOrDefault(inputName + 'Year', false)},
+        requiredInputs.getOrDefault(inputName + 'Year', false) ||
+        required != null && required},
       hasErrorMonth=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Month'))},
       hasErrorDay=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Day'))},
       hasErrorYear=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Year'))},
