--- a/src/main/resources/templates/fragments/inputs/select.html
+++ b/src/main/resources/templates/fragments/inputs/select.html
@@ -4,7 +4,7 @@
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
-      isRequiredInput=${requiredInputs.getOrDefault(inputName, false)},
+      isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || required != null && required},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
