--- a/src/main/resources/templates/fragments/inputs/ssn.html
+++ b/src/main/resources/templates/fragments/inputs/ssn.html
@@ -4,7 +4,8 @@
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
-      isRequiredInput=${requiredInputs.getOrDefault(inputName, false)},
+      isRequiredInput=${      isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || required != null && required},
+.getOrDefault(inputName, false)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
