--- a/src/main/resources/templates/fragments/inputs/textArea.html
+++ b/src/main/resources/templates/fragments/inputs/textArea.html
@@ -6,7 +6,7 @@
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       rows=${!#strings.isEmpty(rows)} ? ${rows} : '6',
       maxLength=${!#strings.isEmpty(maxLength)} ? ${maxLength} : '500',
-      isRequiredInput=${requiredInputs.getOrDefault(inputName, false)},
+      isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || required != null && required},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
@@ -15,7 +15,7 @@
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
     <label th:if="${hasLabel}" th:for="${inputName}" class="form-question">
       <span th:text="${label}"></span>
-      <span th:if="${isRequiredInput}" class="required-input" th:text="#{general.required-field}"></span>
+      <span th:if="${isRequiredInput && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
     </label>
     <p class="text--help"
        th:if="${hasHelpText}"
