Add required indication to screen with one input pattern

--- a/src/main/resources/templates/fragments/cardHeaderForSingleInputScreen.html
+++ b/src/main/resources/templates/fragments/cardHeaderForSingleInputScreen.html
@@ -2,12 +2,11 @@
     th:fragment="cardHeaderForSingleInputScreen"
     th:with="
     hasSubtext=${!#strings.isEmpty(subtext)},
-    isRequiredInput=${requiredInputs.getOrDefault(inputName, false)}"
+    isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || required != null && required}"
     th:assert="${!#strings.isEmpty(header)}"
     class="form-card__header">
   <h1 id="header" class="h2" >
-    <span th:text="${header}"></span>
-    <span th:if="${isRequiredInput}" class="required-input" th:text="#{general.required-field}"></span>
+    <span th:text="${header + ' '}"></span><span th:if="${isRequiredInput}" class="required-input" th:text="#{general.required-field}"></span>
   </h1>
   <p id="header-help-message"
      th:if="${hasSubtext}"
