--- a/src/test/resources/templates/testFlow/subflowAddItemPage2.html
+++ b/src/test/resources/templates/testFlow/subflowAddItemPage2.html
@@ -75,7 +75,7 @@
                                   inputName='phoneInputSubflowPage2',
                                   label='phoneInput')}"/>
           <th:block th:replace="~{fragments/inputs/date ::
-            date(inputName='dateSubflowPage2Day',
+            date(inputName='dateSubflowPage2',
             label='dateInputSubflowPage2',
             groupName='dateInputSubflowPage2')}"/>
         </div>
