--- a/src/main/resources/templates/fragments/inputs/text.html
+++ b/src/main/resources/templates/fragments/inputs/text.html
@@ -29,8 +29,7 @@
            th:attr="
             aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
             aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
-            aria-invalid=${hasError},
-            aria-required=${isRequiredInput}"
+            aria-invalid=${hasError}"
            th:value="${fieldData.getOrDefault(inputName, '')}">
   </div>
 </th:block>
