--- a/src/main/resources/templates/fragments/inputs/checkbox.html
+++ b/src/main/resources/templates/fragments/inputs/checkbox.html
@@ -3,7 +3,7 @@
     th:with="
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
-      isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || required != null && required},
+      isRequiredInput=${requiredInputs.getOrDefault(inputName, false) || (required != null && required)},
       name=${inputName} + '[]',
       hasError=${
         errorMessages != null &&
