--- a/src/main/resources/templates/fragments/inputs/date.html
+++ b/src/main/resources/templates/fragments/inputs/date.html
@@ -3,9 +3,10 @@
     th:with="
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
-      isRequiredInput=${requiredInputs.get(flow).getOrDefault(inputName + 'Month', false) || 
-        requiredInputs.get(flow).getOrDefault(inputName + 'Day', false) || 
-        requiredInputs.get(flow).getOrDefault(inputName + 'Year', false) ||
+      requiredInputsForFlow=${requiredInputs.get(flow)},
+      isRequiredInput=${(requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Month', false)) || 
+        (requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Day', false)) || 
+        (requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Year', false)) ||
         (required != null && required)},
       hasErrorMonth=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Month'))},
       hasErrorDay=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Day'))},
