Automatically indicate required input fields (#502)
Automatically show required fields in form fields. Uses @NotBlank, @NotEmpty and @NotNull annotations on input fields to decide which fields should be marked as required in the client side form.

Adds a mechanism to mark an input as required using an attribute `required` passed to the thymeleaf fragment for the input. 

---------

Co-authored-by: Sree P <sprasad@codeforamerica.org>

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -741,3 +741,12 @@ body,
   display: inline-flex;
   align-items: center;
 }
+
+.required-input {
+  color: #a72f10;
+  font-weight: normal;
+}
+
+.form-group .text--help+.text--error {
+  margin-top: -2.5rem;
+}
