--- a/src/main/resources/templates/fragments/inputs/date.html
+++ b/src/main/resources/templates/fragments/inputs/date.html
@@ -3,6 +3,11 @@
     th:with="
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
+      requiredInputsForFlow=${requiredInputs.get(flow)},
+      isRequiredInput=${(requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Month', false)) || 
+        (requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Day', false)) || 
+        (requiredInputs != null && requiredInputs.getOrDefault(inputName + 'Year', false)) ||
+        (required != null && required)},
       hasErrorMonth=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Month'))},
       hasErrorDay=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Day'))},
       hasErrorYear=${errorMessages != null && !#arrays.isEmpty(errorMessages.get(inputName + 'Year'))},
@@ -10,7 +15,19 @@
     th:assert="${hasLabel || hasAriaLabel}">
   <div th:class="'form-group' + ${hasErrorGroup ? ' form-group--error' : ''}">
     <fieldset th:id="${groupName}" class="input-group input-group--inline">
-      <legend th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
+      <legend th:if="${hasLabel}" th:for="${inputName}"
+             class="form-question">
+        <span th:text="${label}"></span>
+        <span th:if="${isRequiredInput && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
+      </legend>
+      <th:block
+          th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Month')}"></th:block>
+      <th:block
+          th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Day')}"></th:block>
+      <th:block
+          th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Year')}"></th:block>
+      <th:block
+          th:replace="~{fragments/inputError :: validationError(inputName=${groupName})}"></th:block>
       <p class="text--help">
         <label th:for="${inputName}+'-month'"
                th:id="${inputName}+'-month-label'"
@@ -57,13 +74,5 @@
               aria-invalid=${hasErrorYear}"
              th:value="${fieldData.getOrDefault(inputName + 'Year', '')}"/>
     </fieldset>
-    <th:block th:if="${hasErrorMonth}"
-              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Month')}"></th:block>
-    <th:block th:if="${hasErrorDay}"
-              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Day')}"></th:block>
-    <th:block th:if="${hasErrorYear}"
-              th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Year')}"></th:block>
-    <th:block th:if="${hasErrorGroup}"
-              th:replace="~{fragments/inputError :: validationError(inputName=${groupName})}"></th:block>
   </div>
 </th:block>
