--- a/src/main/resources/templates/fragments/inputs/checkbox.html
+++ b/src/main/resources/templates/fragments/inputs/checkbox.html
@@ -3,6 +3,8 @@
     th:with="
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
+      requiredInputsForFlow=${requiredInputs.get(flow)},
+      isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
       name=${inputName} + '[]',
       hasError=${
         errorMessages != null &&
@@ -31,6 +33,7 @@
       </div>
       <div>
         <span th:text="${label}"></span>
+        <span th:if="${isRequiredInput}" class="required-input" th:text="#{general.required-field}"></span>
         <p th:if="${hasHelpText}"
            th:id="${name} + '-' + ${value} + '-help-text'"
            th:text="${checkboxHelpText}"
