--- a/src/main/resources/templates/fragments/inputs/ssn.html
+++ b/src/main/resources/templates/fragments/inputs/ssn.html
@@ -4,17 +4,25 @@
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
+      requiredInputsForFlow=${requiredInputs.get(flow)},
+      isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
     th:assert="${!#strings.isEmpty(inputName)}, ${hasLabel || hasAriaLabel}">
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
-    <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
+    <label th:if="${hasLabel}" th:for="${inputName}" class="form-question">
+      <span th:text="${label}"></span>
+      <span th:if="${isRequiredInput  && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
+    </label>
     <p class="text--help"
        th:if="${hasHelpText}"
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
+    <th:block
+        th:if="${hasError}"
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     <input type="text" class="text-input form-width--med ssn-input"
            th:id="${inputName}"
            th:name="${inputName}"
@@ -25,7 +33,5 @@
             aria-invalid=${hasError}"
            th:value="${fieldData.getOrDefault(inputName, '')}"
            inputmode="numeric">
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
   </div>
 </th:block>
