--- a/src/main/resources/templates/fragments/inputs/textArea.html
+++ b/src/main/resources/templates/fragments/inputs/textArea.html
@@ -6,17 +6,25 @@
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
       rows=${!#strings.isEmpty(rows)} ? ${rows} : '6',
       maxLength=${!#strings.isEmpty(maxLength)} ? ${maxLength} : '500',
+      requiredInputsForFlow=${requiredInputs.get(flow)},
+      isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
       hasError=${
         errorMessages != null &&
         errorMessages.get(inputName) != null &&
         (#arrays.length(errorMessages.get(inputName)) > 0) }"
     th:assert="${!#strings.isEmpty(inputName)}, ${hasLabel || hasAriaLabel}">
   <div th:class="'form-group' + ${(hasError ? ' form-group--error' : '')}">
-    <label th:if="${hasLabel}" th:for="${inputName}" th:text="${label}" class="form-question"/>
+    <label th:if="${hasLabel}" th:for="${inputName}" class="form-question">
+      <span th:text="${label}"></span>
+      <span th:if="${isRequiredInput && !hasAriaLabel}" class="required-input" th:text="#{general.required-field}"></span>
+    </label>
     <p class="text--help"
        th:if="${hasHelpText}"
        th:id="${inputName + '-help-text'}"
        th:text="${helpText}"></p>
+    <th:block
+        th:if="${hasError}"
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     <textarea th:fragment="textArea"
               type="textarea"
               class="textarea spacing-below-0"
@@ -28,7 +36,5 @@
                 aria-invalid=${hasError}"
               th:id="${inputName}"
               th:name="${inputName}">[[${fieldData.getOrDefault(inputName, '')}]]</textarea>
-    <th:block
-        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
   </div>
 </th:block>
